# nemo-canary-fastapi

./: .gitignore  Dockerfile  README.md  api.py  asr_manifest.json  canary.py  docker-compose.yml  pyproject.toml  translation_manifest.json
