[project]
name = "nemo-test"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10,<3.11"
dependencies = [
    "nemo_toolkit[all]",
    "fasttext",
    "wheel",
    "setuptools",
    "pip",
    "pybind11",
    "fastapi",
    "uvicorn",
    "soundfile"
]
